src/test/ui/simd/shuffle-not-out-of-bounds.stderr
error[E0511]: invalid monomorphization of `simd_shuffle4` intrinsic: shuffle index #3 is out of bounds (limit 8)
  --> $DIR/shuffle-not-out-of-bounds.rs:20:31
   |
LL |         let shuffled: f32x4 = simd_shuffle4(vec1, vec2, [0, 4, 7, 9]);
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0511`.
